# dyn2b

./: CMakeLists.txt
cmake/: FindCheck.cmake
include/dyn2b/example/: chain_iterator.h  robots.h  solver_state.h
include/dyn2b/functions/: geometry.h  geometry_nbx.h  kinematic_chain.h  kinematic_chain_nbx.h  linear_algebra.h  mechanics.h
include/dyn2b/types/: geometry.h  geometry_nbx.h  kinematic_chain.h  kinematic_chain_nbx.h  linear_algebra.h  mechanics.h  solver_state.h
src/: CMakeLists.txt
src/dyn2b/: geometry.c  geometry_nbx.c  kinematic_chain.c  kinematic_chain_nbx.c  linear_algebra.c  mechanics.c
src/example/: ab_algorithm.c  achd_algorithm.c  chain_iterator.c  fak_algorithm.c  fpk_algorithm.c  fpk_algorithm_iter.c  fvk_algorithm.c  solver_state.c
src/example/robots/: one_dof.c  two_dof.c
test/: CMakeLists.txt  geometry_test.c  kinematic_chain_test.c  linear_algebra_test.c  main_test.c  mechanics_test.c
